stored procedure to add item attempted, says Successful but does not show up in database. Datetime is also a bugger

--- a/DrinksAndSnacks/Views/Shared/_Layout.cshtml
+++ b/DrinksAndSnacks/Views/Shared/_Layout.cshtml
@@ -33,20 +33,25 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         </a>
         <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="Products" asp-action="Index">
             <i class="	fa fa-cutlery w3-xxlarge"></i>
-            <p style="font-family:sans-serif; font-weight: 700">PRODUCTS</p>
+            <p style="font-family:sans-serif; font-weight: 700">VIEW PRODUCTS</p>
         </a>
         <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="Orders" asp-action="Index">
             <i class="fa fa-sort-amount-desc w3-xxlarge"></i>
-            <p style="font-family:sans-serif; font-weight: 700">ORDERS</p>
+            <p style="font-family:sans-serif; font-weight: 700">VIEW ORDERS</p>
         </a>
         <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="Orders" asp-action="Index">
             <i class="fa fa-shopping-basket w3-xxlarge"></i>
             <p style="font-family:sans-serif; font-weight: 700">BASKET</p>
         </a>
+        <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="CreateOrder" asp-action="Index">
+            <i class="fa fa-pencil w3-xxlarge"></i>
+            <p style="font-family:sans-serif; font-weight: 700">CREATE AN ORDER</p>
+        </a>
         <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="Orders" asp-action="Index">
             <i class="fa fa-trash w3-xxlarge"></i>
             <p style="font-family:sans-serif; font-weight: 700">CANCEL ORDER</p>
         </a>
+
     </nav>
     
     <div class="container">
