Add_Order stored procedure now working in sql, but problems with datetime which is stopping it from working on the website

--- a/DrinksAndSnacks/Views/Shared/_Layout.cshtml
+++ b/DrinksAndSnacks/Views/Shared/_Layout.cshtml
@@ -51,6 +51,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <i class="fa fa-trash w3-xxlarge"></i>
             <p style="font-family:sans-serif; font-weight: 700">CANCEL ORDER</p>
         </a>
+        <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="FindOrder" asp-action="Index">
+            <i class="fa fa-pencil w3-xxlarge"></i>
+            <p style="font-family:sans-serif; font-weight: 700">FIND YOUR ORDER</p>
+        </a>
 
     </nav>
     
