Background image added, quicker way to find and cancel an order also added. Need a way for customers to recieve order id on purchase. PROBLEM with executing add order stored procedure. error says trying to convert nvarchar to int somewhere

--- a/DrinksAndSnacks/Views/Home/Index.cshtml
+++ b/DrinksAndSnacks/Views/Home/Index.cshtml
@@ -1,20 +1,29 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<!DOCTYPE html>
+<html>
+<body>
 
 
-<div class="text-center text-light">
-    <h1 class="display-4">Welcome to <span style="color:goldenrod; font-size:90px; font-family:'Brush Script MT'">Small Bytes</span></h1>
 
-    <p style="font-size:21px; font-weight:600; color:lightgrey">
-        <span style="font-weight:300; font-size:20px">The home of the best</span> <span style="color:white; font-size:22px;">A</span>ssorted <span style="color:white; font-size:22px;">S</span>nack
-        <span style="color:white; font-size:22px;">P</span>roducts <span style="font-size:28px;">. &nbsp; </span>
+    <div class="text-center text-light" >
+        <h1 class="display-4">Welcome to <span style="color:goldenrod; font-size:90px; font-family:'Brush Script MT'">Small Bytes</span></h1>
 
-
-        <span style="color:white; font-size:23px;">N</span>ow
-        <span style="color:white; font-size:23px;">E</span>ven <span style="color:white; font-size:23px;">T</span>astier
-    </p>
-</div>
+        <p style="font-size:21px; font-weight:600; color:lightgrey">
+            <span style="font-weight:300; font-size:20px">The home of the best</span> <span style="color:white; font-size:22px;">A</span>ssorted <span style="color:white; font-size:22px;">S</span>nack
+            <span style="color:white; font-size:22px;">P</span>roducts <span style="font-size:28px;">. &nbsp; </span>
 
 
+            <span style="color:white; font-size:23px;">N</span>ow
+            <span style="color:white; font-size:23px;">E</span>ven <span style="color:white; font-size:23px;">T</span>astier
+        </p>
+    </div>
+
+
+
+</body>
+
+</html>
+<img src="~/lib/coffeebackground.jpg" style="width:100%">
 
