--- a/DrinksAndSnacks/Views/Shared/_Layout.cshtml
+++ b/DrinksAndSnacks/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </style>
 </head>
 
-<body class="w3-black">
+<body class="w3-black" >
     <!-- Icon Bar (Sidebar - hidden on small screens) -->
     <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
         <!-- Avatar image in top left corner -->
@@ -39,17 +39,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <i class="fa fa-sort-amount-desc w3-xxlarge"></i>
             <p style="font-family:sans-serif; font-weight: 700">VIEW ORDERS</p>
         </a>
-        <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="Orders" asp-action="Index">
-            <i class="fa fa-shopping-basket w3-xxlarge"></i>
-            <p style="font-family:sans-serif; font-weight: 700">BASKET</p>
-        </a>
+     
         <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="CreateOrder" asp-action="Index">
             <i class="fa fa-pencil w3-xxlarge"></i>
             <p style="font-family:sans-serif; font-weight: 700">CREATE AN ORDER</p>
         </a>
-        <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="Orders" asp-action="Index">
+        <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="CancelOrder" asp-action="Index">
             <i class="fa fa-trash w3-xxlarge"></i>
-            <p style="font-family:sans-serif; font-weight: 700">CANCEL ORDER</p>
+            <p style="font-family:sans-serif; font-weight: 700">FIND AND CANCEL ORDER</p>
         </a>
         <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="FindOrder" asp-action="Index">
             <i class="fa fa-pencil w3-xxlarge"></i>
