--- a/DrinksAndSnacks/Views/FindOrder/Index.cshtml
+++ b/DrinksAndSnacks/Views/FindOrder/Index.cshtml
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-</div>
+</div>               <!--   Show confirmation message if done correctly  -->
 
 @{
     if ((ViewBag.Success != null) && ((int)ViewBag.Success != 0))
