--- a/DrinksAndSnacks/Views/Home/Index.cshtml
+++ b/DrinksAndSnacks/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
 <html>
 <body>
 
+    <!--   Welcome message Title and small info sentences  -->
 
-
-    <div class="text-center text-light" >
+    <div class="text-center text-light">
         <h1 class="display-4">Welcome to <span style="color:goldenrod; font-size:90px; font-family:'Brush Script MT'">Small Bytes</span></h1>
 
         <p style="font-size:21px; font-weight:600; color:lightgrey">
@@ -23,7 +23,7 @@
 
 
 </body>
-
+<!--  background image  -->
 </html>
 <img src="~/lib/coffeebackground.jpg" style="width:100%">
 
