--- a/DrinksAndSnacks/Views/Home/Privacy.cshtml
+++ b/DrinksAndSnacks/Views/Home/Privacy.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
-
+<!--   Privacy page  -->
 <p>This website will not store any of your personal details. Only store details are stored e.g. Order number, Table number (of the order) and quantity of the product ordered.</p>
