--- a/DrinksAndSnacks/Views/Shared/_Layout.cshtml
+++ b/DrinksAndSnacks/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </style>
 </head>
 
-<body class="w3-black" >
+<body class="w3-black">
     <!-- Icon Bar (Sidebar - hidden on small screens) -->
     <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
         <!-- Avatar image in top left corner -->
@@ -48,27 +48,27 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <i class="fa fa-trash w3-xxlarge"></i>
             <p style="font-family:sans-serif; font-weight: 700">FIND AND CANCEL ORDER</p>
         </a>
-        <!--  <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="FindOrder" asp-action="Index">
-            <i class="fa fa-pencil w3-xxlarge"></i>
-            <p style="font-family:sans-serif; font-weight: 700">FIND YOUR ORDER</p>
-        </a>
+        <!-- <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" asp-area="" asp-controller="OrderItems" asp-action="Index">
+             <i class="fa fa-pencil w3-xxlarge"></i>
+             <p style="font-family:sans-serif; font-weight: 700">ORDER ITEMS</p>
+         </a>
         -->
     </nav>
 
-        <div class="container">
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+    <!--   FOOTER  -->
+    <footer class="border-top footer text-muted  bg-dark ">
+        <div class="container  text-light">
+            &copy; 2019 - DrinksAndSnacks - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-
-        <footer class="border-top footer text-muted  bg-dark ">
-            <div class="container  text-light">
-                &copy; 2019 - DrinksAndSnacks - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </div>
-        </footer>
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        @RenderSection("Scripts", required: false)
-    </body>
+    </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
+</body>
     </html>
